--- a/Software_Innocation_for_Dual_Screen_Notebook/MainPage.xaml
+++ b/Software_Innocation_for_Dual_Screen_Notebook/MainPage.xaml
@@ -6,9 +6,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Visibility="Visible">
 
     <Grid>
-    <Button />
+        <Button />
+        <Button Content="Button" Margin="706,284,0,0" VerticalAlignment="Top" Visibility="Visible" RequestedTheme="Light" RenderTransformOrigin="14.5,10.531" Width="101" UseLayoutRounding="False" d:LayoutRounding="Auto" Height="94" CornerRadius="40,40,40,40" Opacity="0.7" Background="#0C000000" BorderBrush="#7F000000" Click="Button_Click">
+        </Button>
     </Grid>
 </Page>
