--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -5,18 +5,56 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KeyStrokes"
         mc:Ignorable="d"
-        Title="Software Innovation for Dual Screen Notebook" Height="663.402" Width="1016.495"
+        Height="200" Width="1016.495"
         KeyDown="KeyInteractor"
-        Background="LightBlue">
-    <ScrollViewer>
-        <DockPanel HorizontalAlignment="Center" RenderTransformOrigin="0.23,2.0" Width="987" LastChildFill="False">
-            <Button x:Name="addButton" Content="+" Height="75" Width="125" Margin="11,10" KeyDown="Add_KeyDown" Click="Add_Click" RenderTransformOrigin="-1.408,0.48"/>
+        Background="White">
+
+        <ScrollViewer PanningMode="Both" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" Margin="0,0,-0.5,-85.5" >
+        <StackPanel x:Name="myGrid" RenderTransformOrigin="0.23,2.0" Orientation="Horizontal" Height="205" VerticalAlignment="Top">
+            <Button x:Name="addButton" Content="+" Height="80" Width="125" Margin="11,10"  Opacity="0.7" Background="#0C000000" BorderBrush="#7F000000" KeyDown="Add_KeyDown" Click="Add_Click"/>
+            <Popup Name="Popup1" Placement="Bottom"  HorizontalOffset="-100" HorizontalAlignment="Left" VerticalAlignment="Top" IsOpen="False" >
+                <StackPanel Background="White" >
+                    <TextBlock Text="Shortcut Name: "/>
+                    <TextBox x:Name="nameInput"
+                             Width="300"
+                             Height="40"
+                             HorizontalAlignment="Left">
+                    </TextBox>
+                    
+                    <TextBlock Text="Application(s) seperated by a comma:" Margin="0,10,0,0"/>
+                    <TextBox x:Name="appInput"
+                             Width="300"
+                             Height="40"
+                             HorizontalAlignment="Left"
+                             >
+                    </TextBox>
+                    
+                    <TextBlock Text="Image: " Margin="0,10,0,0"/>
+                    <TextBox x:Name="pngInput"
+                             Width="300"
+                             Height="40"
+                             HorizontalAlignment="Left"
+                             >
+                    </TextBox>
+
+                    <TextBlock Text="hotkey Control:" Margin="0,10,0,0"/>
+                    <TextBox x:Name="hotkeyControl"
+                             Width="300"
+                             Height="40"
+                             HorizontalAlignment="Left"
+                             >
+                    </TextBox>
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                        <Button x:Name="cancel_btn" Content="Cancel" Click="Click_Cancel" Background="PaleVioletRed"/>
+                        <Button x:Name="confirm_btn" Content="Confirm" Click="Click_Confirm" Background="LightGreen"/>
+                    </StackPanel>
+                    
+                </StackPanel>
+            </Popup>
             <Button Content="1" Height="75" Width="125" Margin="11,10" KeyDown="Button1_KeyDown" Click="Button1_Click"/>
             <Button Content="2" Height="75" Width="125" Margin="14,10,13,10" KeyDown="Button2_KeyDown" Click="Button2_Click"/>
             <Button Content="3" Height="75" Width="125" Margin="11,1" KeyDown="Button3_KeyDown" Click="Button3_Click"/>
-        </DockPanel>
+        </StackPanel>
     </ScrollViewer>
-
 </Window>
-    
-    
