--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/App.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/App.xaml
@@ -2,6 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:KeyStrokes"
+             xmlns:System="clr-namespace:System;assembly=mscorlib"
+             xmlns:enm="clr-namespace:KeyStrokes"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <LinearGradientBrush x:Key="GrayBlueGradientBrush" StartPoint="0,0" EndPoint="1,1">
@@ -14,5 +16,11 @@
             <Setter Property="Width" Value="80" />
             <Setter Property="Margin" Value="10" />
         </Style>
+
+        <ObjectDataProvider x:Key="enmKey" MethodName="GetValues" ObjectType="{x:Type System:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="enm:VirtualKeyShort+Key"></x:Type>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
     </Application.Resources>
 </Application>
