--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -5,18 +5,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KeyStrokes"
         mc:Ignorable="d"
-        Height="454" Width="1016.495"
+        Height="454" Width="1020.495"
         KeyDown="KeyInteractor"
         Background="White">
 
-    <ScrollViewer PanningMode="HorizontalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" >
-        <StackPanel x:Name="myGrid" RenderTransformOrigin="0.173,1.371" Orientation="Horizontal" Height="205" VerticalAlignment="Top">
-            <Button x:Name="addButton" Content="+" Height="80" Width="125" Margin="11,10"  Opacity="0.7" Background="#0C000000" BorderBrush="#7F000000" KeyDown="Add_KeyDown" Click="Add_Click"/>
+    <ScrollViewer PanningMode="VerticalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" >
+        <StackPanel x:Name="myGrid" RenderTransformOrigin="0.173,1.371" Orientation="Vertical" Height="424" VerticalAlignment="Top" Width="1008">
+            <StackPanel Margin="0,0,10,61" Height="303" Orientation="Horizontal">
+                <Button x:Name="addButton" Content="+" Height="80" Width="125" Margin="11,10"  Opacity="0.7" Background="#0C000000" BorderBrush="#7F000000" KeyDown="Add_KeyDown" Click="Add_Click"/>
 
+                <Button Content="1" Height="75" Width="125" Margin="11,10" KeyDown="Button1_KeyDown" Click="Button1_Click"/>
+                <Button Content="2" Height="75" Width="125" Margin="14,10,13,10" KeyDown="Button2_KeyDown" Click="Button2_Click"/>
+                <Button Content="3" Height="75" Width="125" Margin="11,1" KeyDown="Button3_KeyDown" Click="Button3_Click"/>
+            </StackPanel>
+            <StackPanel x:Name="bottomBar" Orientation="Horizontal" VerticalAlignment="Bottom" Height="59" Background="Gainsboro" HorizontalAlignment="Right" Width="1008">
+                <Button x:Name="media_back" Content="&lt;&lt;" Width="51" Click="media_back_Click"/>
+                <Button x:Name="media_play_pause" Content="Play" Width="67" Click="media_play_pause_Click"/>
+                <Button x:Name="media_forward" Content="&gt;&gt;" Width="51" Click="media_forward_Click"/>
+                <GridSplitter Width="630" Background="Gainsboro"></GridSplitter>
+                <Button x:Name="undo" Content="Undo" Width="51" Click="undo_Click"/>
+                <Button x:Name="redo" Content="Redo" Width="51" Click="redo_Click"/>
+            </StackPanel>
 
-            <Button Content="1" Height="75" Width="125" Margin="11,10" KeyDown="Button1_KeyDown" Click="Button1_Click"/>
-            <Button Content="2" Height="75" Width="125" Margin="14,10,13,10" KeyDown="Button2_KeyDown" Click="Button2_Click"/>
-            <Button Content="3" Height="75" Width="125" Margin="11,1" KeyDown="Button3_KeyDown" Click="Button3_Click"/>
         </StackPanel>
 
     </ScrollViewer>
