--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KeyStrokes"
+        xmlns:controls="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         mc:Ignorable="d"
         Height="540" Width="960"
         KeyDown="KeyInteractor"
@@ -12,8 +13,85 @@
 
     <ScrollViewer PanningMode="VerticalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" Margin="0,0,-8,0" >
         <StackPanel x:Name="myGrid" RenderTransformOrigin="0.173,1.371" Orientation="Vertical" Height="509" VerticalAlignment="Top" Width="auto">
-            <!--<local:TitleBar x:Name="titleBar" VerticalAlignment="Top"/>-->
+            <!--<local:TitleBar x:Name="titleBar" VerticalAlignment="Top"/>
             <local:ButtonGridControl x:Name="grid" />
+           
+-->
+            <Grid Height="70">
+                <Grid VerticalAlignment="Top" Width="70" HorizontalAlignment="Left" Height="50">
+                    <Button VerticalAlignment="Center" Width="40" Height="30" BorderBrush="#FF020202" Content="--" Click="MenuClick">
+                        <Button.Background>
+                            <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
+                                <GradientStop Color="White" Offset="1"/>
+                                <GradientStop Color="#FFCCCCFF"/>
+                                <GradientStop Color="#FFFFFCFC"/>
+                            </LinearGradientBrush>
+                        </Button.Background>
+                    </Button>
+                </Grid>
+                <Grid  Width="250" HorizontalAlignment="Left" Height="70" Margin="90,0,0,0">
+                    <StackPanel VerticalAlignment="Top" x:Name="layoutBtn" Visibility="Hidden" Orientation="Horizontal">
+                        <ComboBox Width="100" x:Name="myComboBox" SelectionChanged="LayoutClick" SelectedValuePath="Content" VerticalAlignment="Center">
+                            <ComboBoxItem IsSelected="True" >1x4</ComboBoxItem>
+                            <ComboBoxItem IsSelected="False" >2x2</ComboBoxItem>
+                            <ComboBoxItem IsSelected="False" >4x1</ComboBoxItem>
+                            <ComboBoxItem IsSelected="False" >5x5</ComboBoxItem>
+                        </ComboBox>
+                        <StackPanel Orientation="Vertical" Margin="10,0,0,0" >
+                        <Button Content="Enter your own" Width="100" Click="getInput" Margin="0,10,0,0" >
+                                <Button.Background>
+                                    <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
+                                        <GradientStop Color="White" Offset="1"/>
+                                        <GradientStop Color="#FFCCCCFF"/>
+                                        <GradientStop Color="#FFFFFCFC"/>
+                                    </LinearGradientBrush>
+                                </Button.Background>
+                            </Button>
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                <TextBox Width="39" Height="20" x:Name="inputBox" Visibility="Hidden"/>
+                                <Button Width="20" Height="20" Click="addLayout" x:Name="okInput" Visibility="Hidden"> OK </Button>
+                            </StackPanel>
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+                <Grid VerticalAlignment="Center" Width="480" HorizontalAlignment="Left" Height="50" Margin="180,-5,0,0">
+                    <Button VerticalAlignment="Top" Width="60" Height="30" BorderBrush="#FF020202" Content="+" Visibility="Hidden" x:Name="newBtn" >
+                        <Button.Background>
+                            <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
+                                <GradientStop Color="White" Offset="1"/>
+                                <GradientStop Color="#FFCCCCFF"/>
+                                <GradientStop Color="#FFFFFCFC"/>
+                            </LinearGradientBrush>
+                        </Button.Background>
+                    </Button>
+                    <Button VerticalAlignment="Top" Width="60" Height="30" BorderBrush="#FF020202" Content="Move" Visibility="Hidden" x:Name="moveBtn" Margin="150,10,0,0" Click="mvClick">
+                        <Button.Background>
+                            <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
+                                <GradientStop Color="White" Offset="1"/>
+                                <GradientStop Color="#FFCCCCFF"/>
+                                <GradientStop Color="#FFFFFCFC"/>
+                            </LinearGradientBrush>
+                        </Button.Background>
+                    </Button>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,-180,0" Visibility="Hidden" x:Name="movementStack">
+                        <TextBlock VerticalAlignment="Center" Margin="0,0,10,0">Button Name:</TextBlock>
+                        <TextBox Width="39" Height="20" x:Name="moveBox" />
+                        <TextBlock VerticalAlignment="Center"  Margin="10,0,0,0">Row:</TextBlock>
+                        <TextBox Width="39" Height="20" Margin="10,0,10,0" x:Name="rowInput"></TextBox>
+                        <TextBlock VerticalAlignment="Center">Column: </TextBlock>
+                        <TextBox Width="39" Height="20" Margin="10,0,0,0" x:Name="colInput"></TextBox>
+                        <Button Width="20" Height="20" Click="mvRCSubmit" x:Name="RCSubmit" >OK</Button>
+                    </StackPanel>
+
+                </Grid>
+            </Grid>
+            <controls:UniformGrid x:Name="newMyGrid" Margin="10" Rows="1" Columns="4" Height="303" ClipToBounds="True">
+                <Button  x:Name="addButton" Content="+" Height="30" Width="50" Margin="11,10"  Opacity="0.7" Background="#0C000000" BorderBrush="#7F000000" KeyDown="Add_KeyDown" Click="Add_Click"/>
+                <Button Content="1" Height="30" Width="50" Margin="11,10" KeyDown="Button1_KeyDown" Click="Button1_Click"/>
+                <Button Content="2" Height="30" Width="50" Margin="14,10,13,10" KeyDown="Button2_KeyDown" Click="Button2_Click"/>
+                <Button Content="3" Height="30" Width="50" Margin="11,1" KeyDown="Button3_KeyDown" Click="Button3_Click"/>
+            </controls:UniformGrid>
+            
             <StackPanel x:Name="bottomBar" Orientation="Horizontal" VerticalAlignment="Bottom" Height="62" Background="Gainsboro" HorizontalAlignment="Right" Width="948" Margin="0,0,10,0">
                 <Button x:Name="media_back" Content="&lt;&lt;" Width="51" Background="GhostWhite" Click="media_back_Click"/>
                 <Button x:Name="media_play_pause" Content="Play" Width="67" Background="GhostWhite" Click="media_play_pause_Click"/>
@@ -22,6 +100,8 @@
                 <Button x:Name="undo" Content="Undo" Width="51" Background="GhostWhite" Click="undo_Click"/>
                 <Button x:Name="redo" Content="Redo" Width="51" Background="GhostWhite" Click="redo_Click"/>
             </StackPanel>
+
+        </StackPanel>
          <!--   <Grid x:Name="buttonGrid" Margin="0,0,10,61" Height="0" Width="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
@@ -41,7 +121,5 @@
                 <Button Grid.Column="3" Content="3" Width="Auto" Margin="40,12" KeyDown="Button3_KeyDown" Click="Button3_Click"/>
             </Grid>
 -->
-        </StackPanel>
-
     </ScrollViewer>
 </Window>
