--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -14,7 +14,6 @@
     <ScrollViewer PanningMode="VerticalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" Margin="0,0,-8,0" >
         <StackPanel x:Name="myGrid" RenderTransformOrigin="0.173,1.371" Orientation="Vertical" Height="509" VerticalAlignment="Top" Width="auto">
             <!--<local:TitleBar x:Name="titleBar" VerticalAlignment="Top"/>
-            <local:ButtonGridControl x:Name="grid" />
            
 -->
             <Grid Height="70">
@@ -29,7 +28,11 @@
                         </Button.Background>
                     </Button>
                 </Grid>
-                <Grid  Width="250" HorizontalAlignment="Left" Height="70" Margin="90,0,0,0">
+                <local:MenuControl x:Name="menu_control" Visibility="Hidden" Margin="0,10,821,-64" />
+                <local:ButtonGridControl x:Name="grid" Margin="10,0,10,-422" Height="442" VerticalAlignment="Bottom" />
+
+
+                <!--     <Grid  Width="250" HorizontalAlignment="Left" Height="70" Margin="90,0,0,0">
                     <StackPanel VerticalAlignment="Top" x:Name="layoutBtn" Visibility="Hidden" Orientation="Horizontal">
                         <ComboBox Width="100" x:Name="myComboBox" SelectionChanged="LayoutClick" SelectedValuePath="Content" VerticalAlignment="Center">
                             <ComboBoxItem IsSelected="True" >1x4</ComboBoxItem>
@@ -82,17 +85,17 @@
                         <TextBox Width="39" Height="20" Margin="10,0,0,0" x:Name="colInput"></TextBox>
                         <Button Width="20" Height="20" Click="mvRCSubmit" x:Name="RCSubmit" >OK</Button>
                     </StackPanel>
-
-                </Grid>
+                </Grid> -->
             </Grid>
+<!--
             <controls:UniformGrid x:Name="newMyGrid" Margin="10" Rows="1" Columns="4" Height="303" ClipToBounds="True">
                 <Button  x:Name="addButton" Content="+" Height="30" Width="50" Margin="11,10"  Opacity="0.7" Background="#0C000000" BorderBrush="#7F000000" KeyDown="Add_KeyDown" Click="Add_Click"/>
                 <Button Content="1" Height="30" Width="50" Margin="11,10" KeyDown="Button1_KeyDown" Click="Button1_Click"/>
                 <Button Content="2" Height="30" Width="50" Margin="14,10,13,10" KeyDown="Button2_KeyDown" Click="Button2_Click"/>
                 <Button Content="3" Height="30" Width="50" Margin="11,1" KeyDown="Button3_KeyDown" Click="Button3_Click"/>
             </controls:UniformGrid>
-            
-            <StackPanel x:Name="bottomBar" Orientation="Horizontal" VerticalAlignment="Bottom" Height="62" Background="Gainsboro" HorizontalAlignment="Right" Width="948" Margin="0,0,10,0">
+-->            
+       <!--     <StackPanel x:Name="bottomBar" Orientation="Horizontal" VerticalAlignment="Bottom" Height="62" Background="Gainsboro" HorizontalAlignment="Right" Width="948" Margin="0,0,10,0">
                 <Button x:Name="media_back" Content="&lt;&lt;" Width="51" Background="GhostWhite" Click="media_back_Click"/>
                 <Button x:Name="media_play_pause" Content="Play" Width="67" Background="GhostWhite" Click="media_play_pause_Click"/>
                 <Button x:Name="media_forward" Content="&gt;&gt;" Width="51" Background="GhostWhite" Click="media_forward_Click"/>
@@ -100,7 +103,7 @@
                 <Button x:Name="undo" Content="Undo" Width="51" Background="GhostWhite" Click="undo_Click"/>
                 <Button x:Name="redo" Content="Redo" Width="51" Background="GhostWhite" Click="redo_Click"/>
             </StackPanel>
-
+-->
         </StackPanel>
          <!--   <Grid x:Name="buttonGrid" Margin="0,0,10,61" Height="0" Width="0">
                 <Grid.ColumnDefinitions>
