--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MenuControl.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MenuControl.xaml
@@ -4,16 +4,42 @@
     xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" Width="941"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" Width="139"
     xmlns:local="clr-namespace:KeyStrokes">
-    
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Background="GhostWhite" Margin="0,0,-180,0" x:Name="movementStack">
+    <StackPanel Orientation="Vertical" HorizontalAlignment="Right" Background="GhostWhite" x:Name="movementStack" Height="150" Width="140">
+        <Button Width="46" Height="20" HorizontalAlignment="Left" Background="GhostWhite" Click="Close_Click"  x:Name="Close" Content="Close" />
+        <TextBlock Text="Grid Size" Margin="10,0,0,0" />
+        <ComboBox x:Name="layout_box" SelectionChanged="layout_SelectionChanged" SelectedValuePath="Content" VerticalAlignment="Center" Margin="10,0">
+            <ComboBoxItem IsSelected="False" Content="1x4" />
+            <ComboBoxItem IsSelected="False" Content="2x2" />
+            <ComboBoxItem IsSelected="True" Content="3x3" />
+            <ComboBoxItem IsSelected="False" Content="4x4" />
+            <ComboBoxItem IsSelected="False" Content="4x2" />
+            <ComboBoxItem IsSelected="False" Content="5x5" />
+        </ComboBox>
+        <Button Width="auto" Height="20" Background="GhostWhite" Click="add_button_Click"  x:Name="add_button" Content="Add Button" />
+        <!-- <StackPanel Orientation="Vertical" Margin="10,0,0,0" >
+            <Button Content="Enter your own" Width="100" Click="getInput" Margin="0,10,0,0" >
+                <Button.Background>
+                    <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
+                        <GradientStop Color="White" Offset="1"/>
+                        <GradientStop Color="#FFCCCCFF"/>
+                        <GradientStop Color="#FFFFFCFC"/>
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <TextBox Width="39" Height="20" x:Name="inputBox" Visibility="Hidden"/>
+                <Button Width="20" Height="20" Click="addLayout" x:Name="okInput" Visibility="Hidden">OK</Button>
+            </StackPanel>
+        </StackPanel>
+        
         <TextBlock VerticalAlignment="Center" Margin="0,0,10,0">Button Name:</TextBlock>
         <TextBox Width="39" Height="20" x:Name="moveBox" />
         <TextBlock VerticalAlignment="Center"  Margin="10,0,0,0">Row:</TextBlock>
         <TextBox Width="39" Height="20" Margin="10,0,10,0" x:Name="rowInput"></TextBox>
         <TextBlock VerticalAlignment="Center">Column:</TextBlock>
         <TextBox Width="39" Height="20" Margin="10,0,0,0" x:Name="colInput"></TextBox>
-        <Button Width="20" Height="20" Background="GhostWhite" Click="RCSubmit_Click"  x:Name="RCSubmit" >OK</Button>
+        <Button Width="20" Height="20" Background="GhostWhite" Click="RCSubmit_Click"  x:Name="RCSubmit" >OK</Button> -->
     </StackPanel>
 </UserControl>
