it looks nice but does not work...

--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -10,15 +10,15 @@
         KeyDown="KeyInteractor"
         Background="GhostWhite">
     <!--WindowStyle="None"-->
-
-    <ScrollViewer PanningMode="VerticalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" Margin="0,0,-8,0" >
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="{Binding ActualHeight,ElementName=titlebar}"/>
+    </WindowChrome.WindowChrome>
+        <ScrollViewer PanningMode="VerticalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" Margin="0,0,-8,0" >
         <StackPanel x:Name="myGrid" RenderTransformOrigin="0.173,1.371" Orientation="Vertical" Height="509" VerticalAlignment="Top" Width="auto">
-            <!--<local:TitleBar x:Name="titleBar" VerticalAlignment="Top"/>
-           
--->
-            <Grid Height="70">
-                <Grid VerticalAlignment="Top" Width="70" HorizontalAlignment="Left" Height="50">
-                    <Button VerticalAlignment="Center" Width="40" Height="30" BorderBrush="#FF020202" Content="☰" Click="MenuClick">
+
+            <Border  Background="LightBlue" DockPanel.Dock="Top" Height="50" x:Name="titlebar" Width="auto">
+                <Grid VerticalAlignment="Top"  HorizontalAlignment="Left" Height="50" Width="956">
+                    <Button Panel.ZIndex="5" VerticalAlignment="Center" HorizontalAlignment="Left" Width="40" Height="30" BorderBrush="#FF020202" Content="☰" Click="MenuClick">
                         <Button.Background>
                             <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
                                 <GradientStop Color="White" Offset="1"/>
@@ -27,7 +27,17 @@
                             </LinearGradientBrush>
                         </Button.Background>
                     </Button>
+                    <!-- These need to be changed to actual icons-->
+                    <controls:TextBlock VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,105,0" > -- </controls:TextBlock>
+                    <controls:TextBlock VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,58,0"> [ ] </controls:TextBlock>
+                    <controls:TextBlock VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,14,0" > X </controls:TextBlock>
                 </Grid>
+            </Border>
+            <!--<local:TitleBar x:Name="titleBar" VerticalAlignment="Top"/>
+           
+-->
+            <Grid Height="70">
+               
                 <local:MenuControl Canvas.ZIndex="3" x:Name="menu_control" Visibility="Hidden" Margin="4,-6,818,-99" />
                 <local:ButtonGridControl x:Name="grid" Margin="10,0,10,-422" Height="442" VerticalAlignment="Bottom" />
 
