--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -5,19 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KeyStrokes"
         mc:Ignorable="d"
-        Height="454" Width="1016.495"
+        Height="320" Width="650"
         KeyDown="KeyInteractor"
-        Background="White">
+        Background="FloralWhite"
+        ResizeMode="NoResize"
+        Title="Software Innovation for Dual Screen Notebook"
+        >
+    <Grid x:Name="myGrid">
+        <TextBlock TextAlignment="Center" FontSize="24" Margin="180,10,180,229">
+            <Bold>Applications</Bold>
+        </TextBlock>
+        <!--<Button Height="50" Width="50" Margin="0,-150,0,0"/>-->
+        <ScrollViewer Name="ButtonViewholder" PanningMode="HorizontalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" >
+            <StackPanel Name="MyStack" RenderTransformOrigin="0.173,1.371" Orientation="Horizontal" Height="213" VerticalAlignment="Top">
+                <Button Height="75" Width="90" Margin="11,10" KeyDown="Button1_KeyDown" Click="Button1_Click">
+                    <DockPanel>
+                        <Image Source="Images/lor.jpg" Height="72" Width="75" RenderTransformOrigin="0.455,-0.263"/>
+                        <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="-80,0,-5,-20">1</TextBlock>
+                    </DockPanel>
+                </Button>
+                <Button Height="75" Width="90" Margin="11,10" KeyDown="Button2_KeyDown" Click="Button2_Click">
+                    <DockPanel>
+                        <Image Source="Images/reddit.jpg" Height="72" Width="75" RenderTransformOrigin="0.455,-0.263"/>
+                        <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="-80,0,-5,-20">2</TextBlock>
+                    </DockPanel>
+                </Button>
+                <Button Height="75" Width="90" Margin="11,10" KeyDown="Button3_KeyDown" Click="Button3_Click">
+                    <DockPanel>
+                        <Image Source="Images/YT.png" Height="75" Width="90" RenderTransformOrigin="0.455,-0.263"/>
+                        <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="-80,0,5,-20">3</TextBlock>
+                    </DockPanel>
+                </Button>
 
-    <ScrollViewer PanningMode="HorizontalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" >
-        <StackPanel x:Name="myGrid" RenderTransformOrigin="0.173,1.371" Orientation="Horizontal" Height="205" VerticalAlignment="Top">
-            <Button x:Name="addButton" Content="+" Height="80" Width="125" Margin="11,10"  Opacity="0.7" Background="#0C000000" BorderBrush="#7F000000" KeyDown="Add_KeyDown" Click="Add_Click"/>
-
-
-            <Button Content="1" Height="75" Width="125" Margin="11,10" KeyDown="Button1_KeyDown" Click="Button1_Click"/>
-            <Button Content="2" Height="75" Width="125" Margin="14,10,13,10" KeyDown="Button2_KeyDown" Click="Button2_Click"/>
-            <Button Content="3" Height="75" Width="125" Margin="11,1" KeyDown="Button3_KeyDown" Click="Button3_Click"/>
-        </StackPanel>
-
-    </ScrollViewer>
+            </StackPanel>
+        </ScrollViewer>
+        
+        <!--Added the help and add buttons to the bottom-->
+        <Button Content="HELP" x:Name="helpButton" Height="75" Width="90" Margin="0,0,175,-175"  Opacity="5.5"  Click="Help_Click" BorderThickness="2" ClipToBounds="True"/>
+        <Button Content="+" x:Name="addButton" Height="75" Width="90" Margin="0,0,-175,-175"  Opacity="5.5" KeyDown="Add_KeyDown" Click="Add_Click" BorderThickness="2" ClipToBounds="True"/>
+    </Grid>
 </Window>
